# tes

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  RELEASE.md
.github/: pull_request_template.md
.github/workflows/: CI.yml
docs/: FEATURES.md
examples/: service-info.rs  simple.rs  status-table.rs  task-get.rs  task-list-all.rs  task-submit.rs
src/: lib.rs  v1.rs
src/v1/: client.rs  types.rs
src/v1/client/: builder.rs  options.rs  tasks.rs
src/v1/types/: requests.rs  responses.rs  task.rs
src/v1/types/responses/: service.rs  service_info.rs  task.rs
src/v1/types/responses/service/: builder.rs
src/v1/types/responses/service_info/: builder.rs
src/v1/types/task/: executor.rs  file.rs
