[package]
name = "tes"
description = "A crate for working with the Task Execution Service (TES) specification"
version = "0.3.0"
edition = "2021"
authors = ["The St. Jude Rust Labs developers"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/stjude-rust-labs/tes"
repository = "https://github.com/stjude-rust-labs/tes"
rust-version = "1.80.0"

[dependencies]
# `anyhow` is required because `reqwest_middleware` uses `anyhow::Result` as one
# of its return types. The main error crates used within `tes` is `miette`.
anyhow = { version = "1.0.95", optional = true }
chrono = { version = "0.4.38", features = ["serde"] }
miette = { version = "7.5.0", optional = true }
reqwest = { version = "0.12.7", features = ["json"] }
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"
serde = { version = "1.0.209", features = ["derive"], optional = true }
serde_json = { version = "1.0.128", optional = true }
tokio = { version = "1.40.0", features = ["full", "time"] }
tracing = "0.1.40"
url = { version = "2.5.2", features = ["serde"], optional = true }
base64 = "0.21"

[dev-dependencies]
pretty_assertions = "1.4.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
default = ["types"]
client = ["dep:anyhow", "dep:miette", "types", "dep:serde_json", "dep:url"]
ord = []
serde = ["dep:serde", "dep:serde_json"]
types = ["dep:url"]

[[example]]
name = "simple"
required-features = ["client", "serde"]

[[example]]
name = "service-info"
required-features = ["client", "serde"]

[[example]]
name = "task-get"
required-features = ["client", "serde"]

[[example]]
name = "task-list-all"
required-features = ["client", "serde"]

[[example]]
name = "task-submit"
required-features = ["client", "serde"]

[lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"

[package.metadata.docs.rs]
all-features = true
