[package]
name = "tes"
description = "A crate for working with the Task Execution Service (TES) specification"
version = "0.8.0"
edition = "2021"
authors = ["The St. Jude Rust Labs developers"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/stjude-rust-labs/tes"
repository = "https://github.com/stjude-rust-labs/tes"
rust-version = "1.82.0"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["types"]
client = [
    "serde",
    "types",
    "dep:tracing",
    "dep:reqwest",
    "dep:url",
    "dep:serde_url_params",
]
ord = []
serde = ["dep:serde"]
types = ["dep:url"]

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
reqwest = { version = "0.12.23", features = ["json"], optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.143" }
serde_url_params = { version = "0.2.1", optional = true }
thiserror = "2.0.15"
tracing = { version = "0.1.41", optional = true }
url = { version = "2.5.4", features = ["serde"], optional = true }

[dev-dependencies]
base64 = "0.22"
miette = "7.6.0"
pretty_assertions = "1.4.1"
tokio = { version = "1.47.1", features = ["full", "time"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[[example]]
name = "simple"
required-features = ["client", "serde"]

[[example]]
name = "service-info"
required-features = ["client", "serde"]

[[example]]
name = "task-get"
required-features = ["client", "serde"]

[[example]]
name = "task-list-all"
required-features = ["client", "serde"]

[[example]]
name = "task-submit"
required-features = ["client", "serde"]

[lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
